@@ -15,19 +15,16 @@ import io.camunda.zeebe.msgpack.value.StringValue;
 import io.camunda.zeebe.protocol.record.value.TenantOwned;
 import io.camunda.zeebe.util.buffer.BufferUtil;
 import java.util.Collection;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 import org.agrona.DirectBuffer;
-import org.agrona.concurrent.UnsafeBuffer;
 
 public class JobActivationPropertiesImpl extends UnpackedObject implements JobActivationProperties {
   private final StringProperty workerProp = new StringProperty("worker", "");
   private final LongProperty timeoutProp = new LongProperty("timeout", -1);
   private final ArrayProperty<StringValue> fetchVariablesProp =
-      new ArrayProperty<>("variables", new StringValue());
+      new ArrayProperty<>("variables", StringValue::new);
   private final ArrayProperty<StringValue> tenantIdsProp =
-      new ArrayProperty<>("tenantIds", new StringValue(TenantOwned.DEFAULT_TENANT_IDENTIFIER));
+      new ArrayProperty<>(
+          "tenantIds", () -> new StringValue(TenantOwned.DEFAULT_TENANT_IDENTIFIER));
 
   public JobActivationPropertiesImpl() {
     declareProperty(workerProp)
@@ -47,9 +44,15 @@ public class JobActivationPropertiesImpl extends UnpackedObject implements JobAc
     return this;
   }
 
-  public JobActivationPropertiesImpl setFetchVariables(final List<StringValue> variables) {
+  public JobActivationPropertiesImpl setFetchVariables(final Collection<StringValue> variables) {
     fetchVariablesProp.reset();
     variables.forEach(variable -> fetchVariablesProp.add().wrap(variable));
+    return this;
+  }
+
+  public JobActivationPropertiesImpl setTenantIds(final Collection<String> tenantIds) {
+    tenantIdsProp.reset();
+    tenantIds.forEach(tenantId -> tenantIdsProp.add().wrap(BufferUtil.wrapString(tenantId)));
     return this;
   }
 
@@ -60,9 +63,7 @@ public class JobActivationPropertiesImpl extends UnpackedObject implements JobAc
 
   @Override
   public Collection<DirectBuffer> fetchVariables() {
-    return fetchVariablesProp.stream()
-        .map(val -> new UnsafeBuffer(val.getValue()))
-        .collect(Collectors.toList());
+    return fetchVariablesProp.stream().map(StringValue::getValue).toList();
   }
 
   @Override
@@ -72,15 +73,6 @@ public class JobActivationPropertiesImpl extends UnpackedObject implements JobAc
 
   @Override
   public Collection<String> tenantIds() {
-    return StreamSupport.stream(tenantIdsProp.spliterator(), false)
-        .map(StringValue::getValue)
-        .map(BufferUtil::bufferAsString)
-        .collect(Collectors.toList());
-  }
-
-  public JobActivationPropertiesImpl setTenantIds(final List<String> tenantIds) {
-    tenantIdsProp.reset();
-    tenantIds.forEach(tenantId -> tenantIdsProp.add().wrap(BufferUtil.wrapString(tenantId)));
-    return this;
+    return tenantIdsProp.stream().map(StringValue::toString).toList();
   }
 }
